packages/edxml-test-corpus/edxml_test_corpus-3.0.0.dev2-py3-none-any.whl/edxml_test_corpus/tests/invalid/structure/wrong-namespace.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing structure validation, verify if EDXML data with incorrect namespace is rejected.
-->
<edxml xmlns="http://example" version="3.0.0"/>
